2000-06-18  Stephane Carrez  <stcarrez@worldnet.fr>

	* binutils-all/objdump.exp (cpus_expected): Recognize m68hc11 and
	m68hc12.

2000-06-18  Nick Clifton  <nickc@redhat.com>

	* binutils-all/readelf.wi: Do not assume the compilation tag to be
	unit 1.

	* binutils-all/objcopy.exp: Expect all arm variants to fail the
	copying executable test.

2000-06-14  Hans-Peter Nilsson  <hp@bitrange.com>

	* binutils-all/readelf.exp (regexp_diff): Do not break when a
	mismatching line is found.
	(readelf_find_size): New.
	(readelf_size): New global variable.
	(readelf_test): Add newline to send_log of command.
	If $srcdir/$subdir/$regexp_file-$readelf_size exists, use it
	instead of $srcdir/$subdir/$regexp_file.
	(*-*elf test): Fix typo in message.
	* binutils-all/readelf.s-64: New.
	* binutils-all/readelf.ss-64: New.

2000-05-02  Alan Modra  <alan@linuxcare.com.au>

	* binutils-all/objcopy.exp (simple copy): Clear xfail for hppa-linux.

	* binutils-all/hppa/objdump.exp: Disable test for elf.

2000-03-13  Nick Clifton  <nickc@cygnus.com>

	* binutils-all/readelf.s: Adjust to match noew format of readelf
	output. 
	* binutils-all/readelf.ss: Adjust to match noew format of readelf 
	output. 

1999-11-01  Nick Clifton  <nickc@cygnus.com>

	* binutils-all/objcopy.exp: Expect simple objcopy test for fail
	for COFF based ARM and Thumb ports.

Tue Sep 14 00:28:17 1999  Jeffrey A Law  (law@cygnus.com)

	* binutils-all/hppa/objdump.exp: Do not run for PA64.

1999-09-04  Steve Chamberlain  <sac@pobox.com>

	* binutils-all/objdump.exp: Add pj to cpus_expected.

Sat Aug 28 00:24:27 1999  Jerry Quinn <jquinn@nortelnetworks.com>

	* binutils-all/hppa/freg.s:  New file.
	* binutils-all/hppa/objdump.exp:  Add freg.s test.

1999-08-09  Ian Lance Taylor  <ian@zembu.com>

	* binutils-all/objcopy.exp: Add setup_xfail for simple copy test
	for i*86-*-msdos*.

1999-07-21  H.J. Lu  <hjl@gnu.org>

	* binutils-all/testprog.c: Include <stdio.h>.

1999-06-29  Nick Clifton  <nickc@cygnus.com>
